--- a/style.scss
+++ b/style.scss
@@ -3,3 +3,8 @@
 @import "./parrtials/navbar";
 @import "./parrtials/contact";
 @import "./parrtials/program";
+@import "./parrtials/services-provided";
+@import "./parrtials/graphics-design";
+@import "./parrtials/resources";
+@import "./parrtials/about-me";
+@import "./parrtials/contacts";
