--- a/style.css
+++ b/style.css
@@ -208,12 +208,12 @@ a {
     background-color: #060042;
   }
   .program h3 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     padding-bottom: 1.5rem;
     color: blue;
   }
   .program p {
-    font-size: 19px;
+    font-size: 15px;
     color: white;
   }
   .program .course-details {
@@ -260,5 +260,304 @@ a {
   .program .check-out:hover {
     background-color: #454a4e;
     transition: 0.5s;
+  }
+}
+.services-provided {
+  padding: 2rem 3rem;
+}
+.services-provided .title {
+  text-align: center;
+  color: rgb(73, 73, 73);
+}
+.services-provided .services {
+  padding: 2rem 3rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 2rem;
+  justify-content: flex-start;
+}
+.services-provided .services .projects p {
+  font-size: 14px;
+  padding-top: 1rem;
+}
+.services-provided .services .projects h3 {
+  font-size: 16px;
+}
+
+@media (max-width: 360px) {
+  .services-provided {
+    padding: 2rem 1rem;
+  }
+  .services-provided .title {
+    text-align: center;
+    font-size: 15px;
+  }
+  .services-provided .services {
+    padding: 2rem 1rem;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 2rem;
+    justify-content: flex-start;
+  }
+  .services-provided .services .projects p {
+    font-size: 14px;
+    padding-top: 1rem;
+  }
+  .services-provided .services .projects h3 {
+    font-size: 14px;
+    text-align: center;
+  }
+}
+.graphics-design {
+  background-color: #060042;
+  padding: 3rem;
+}
+.graphics-design .section-heading {
+  text-align: center;
+  padding: 2rem 4rem;
+}
+.graphics-design .section-heading h3 {
+  font-size: 2rem;
+  padding-bottom: 1rem;
+  color: blue;
+}
+.graphics-design .section-heading p {
+  color: white;
+}
+.graphics-design .section-details {
+  background-color: white;
+  width: 55%;
+  display: flex;
+  flex-direction: column;
+  margin-left: 9rem;
+}
+.graphics-design .section-details img {
+  width: 100%;
+  height: 80%;
+}
+.graphics-design .section-details .about-section {
+  text-align: center;
+  padding: 2rem;
+}
+.graphics-design .section-details .about-section h4 {
+  padding: 1rem;
+  color: rgb(35, 224, 224);
+  font-size: 1.2rem;
+}
+.graphics-design .section-details .about-section p {
+  padding-bottom: 1.5rem;
+}
+.graphics-design .section-details .about-section a {
+  background-color: blue;
+  color: white;
+  padding: 0.5rem 1.5rem;
+}
+.graphics-design .section-details .about-section a:hover {
+  background-color: rgb(4, 4, 82);
+  transition: 0.5s;
+}
+
+@media (max-width: 360px) {
+  .graphics-design {
+    background-color: #060042;
+    padding: 1rem;
+  }
+  .graphics-design .section-heading {
+    text-align: center;
+    padding: 2rem 1rem;
+  }
+  .graphics-design .section-heading h3 {
+    font-size: 1.4rem;
+    padding-bottom: 1rem;
+    color: blue;
+  }
+  .graphics-design .section-heading p {
+    font-size: 14px;
+    color: white;
+  }
+  .graphics-design .section-details {
+    background-color: white;
+    width: 99%;
+    display: flex;
+    flex-direction: column;
+    margin-left: 0.5rem;
+    margin-right: 1rem;
+  }
+  .graphics-design .section-details img {
+    width: 100%;
+    height: 80%;
+  }
+  .graphics-design .section-details .about-section {
+    text-align: center;
+    padding: 1rem;
+  }
+  .graphics-design .section-details .about-section h4 {
+    padding: 1rem;
+    color: rgb(35, 224, 224);
+    font-size: 1.2rem;
+  }
+  .graphics-design .section-details .about-section p {
+    padding-bottom: 1.5rem;
+  }
+  .graphics-design .section-details .about-section a {
+    background-color: blue;
+    color: white;
+    padding: 0.5rem 1.5rem;
+  }
+  .graphics-design .section-details .about-section a:hover {
+    background-color: rgb(4, 4, 82);
+    transition: 0.5s;
+  }
+}
+.resources {
+  background-color: #056B4E;
+  text-align: center;
+  padding: 2rem;
+  color: white;
+}
+.resources h3 {
+  padding-bottom: 1.5rem;
+}
+.resources p {
+  margin-bottom: 2rem;
+}
+.resources a {
+  background-color: #6C757D;
+  padding: 0.5rem 1rem;
+  color: white;
+}
+.resources a:hover {
+  background-color: #3a3c3f;
+  transition: 0.5s;
+}
+
+@media (max-width: 360px) {
+  .resources {
+    background-color: #056B4E;
+    text-align: center;
+    padding: 2rem 1rem;
+    color: white;
+  }
+  .resources h3 {
+    padding-bottom: 1.5rem;
+  }
+  .resources p {
+    margin-bottom: 2rem;
+  }
+  .resources a {
+    background-color: #6C757D;
+    padding: 0.5rem 1rem;
+    color: white;
+  }
+  .resources a:hover {
+    background-color: #3a3c3f;
+    transition: 0.5s;
+  }
+}
+.about-me {
+  background-color: #1E293B;
+  padding: 2rem 3rem;
+}
+.about-me .name {
+  text-align: center;
+}
+.about-me .name img {
+  width: 9rem;
+  height: 9rem;
+  border-radius: 50%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.about-me .name h3 {
+  color: white;
+  font-size: 1.8rem;
+}
+.about-me .content {
+  color: white;
+  margin-top: 2rem;
+}
+.about-me .content p {
+  margin-top: 1rem;
+}
+.about-me .content a {
+  color: blue;
+}
+
+@media (max-width: 360px) {
+  .about-me {
+    background-color: #1E293B;
+    padding: 2rem 1rem;
+  }
+  .about-me .name {
+    text-align: center;
+  }
+  .about-me .name img {
+    width: 5rem;
+    height: 5rem;
+    border-radius: 50%;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .about-me .name h3 {
+    color: white;
+    font-size: 1.2rem;
+  }
+  .about-me .content {
+    color: white;
+    margin-top: 2rem;
+  }
+  .about-me .content p {
+    margin-top: 1rem;
+  }
+  .about-me .content a {
+    color: blue;
+  }
+}
+.contacts {
+  background-color: #060042;
+  color: white;
+  padding: 2.5rem 3rem;
+}
+.contacts h3 {
+  font-size: 1.5rem;
+  text-align: center;
+}
+.contacts .links {
+  padding-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+}
+.contacts .links .bx {
+  font-size: 2rem;
+}
+.contacts .links .common {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+@media (max-width: 360px) {
+  .contacts {
+    background-color: #060042;
+    color: white;
+    padding: 2.5rem 2rem;
+  }
+  .contacts h3 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
+  .contacts .links {
+    padding-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .contacts .links .bx {
+    font-size: 2rem;
+  }
+  .contacts .links .common {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
 }/*# sourceMappingURL=style.css.map */
