--- a/style.css
+++ b/style.css
@@ -560,4 +560,15 @@ a {
     flex-direction: column;
     align-items: center;
   }
+}
+footer {
+  text-align: center;
+  padding: 4rem;
+}
+
+@media (max-width: 360px) {
+  footer {
+    text-align: center;
+    padding: 4rem 1rem;
+  }
 }/*# sourceMappingURL=style.css.map */
