--- a/style.scss
+++ b/style.scss
@@ -9,3 +9,5 @@
 @import "./parrtials/about-me";
 @import "./parrtials/contacts";
 @import "./parrtials/footer";
+@import "./parrtials/introduction";
+@import "./parrtials/course-datails";
