--- a/style.css
+++ b/style.css
@@ -571,4 +571,202 @@ footer {
     text-align: center;
     padding: 4rem 1rem;
   }
+}
+.introduction {
+  padding: 4rem 0rem;
+  background: linear-gradient(to right, rgba(17, 75, 92, 0.637), rgba(17, 75, 92, 0.555)), url(/IMAGES/html.jpg);
+  background-repeat: no-repeat;
+}
+.introduction h3 {
+  font-size: 2rem;
+  color: white;
+}
+.introduction .course-details {
+  width: 20%;
+}
+.introduction p {
+  color: white;
+  padding: 1rem 2rem;
+  background-color: #1E293B;
+}
+.introduction p a {
+  color: #BE3245;
+}
+
+@media (max-width: 360px) {
+  .introduction {
+    padding: 3rem 1rem;
+    background: linear-gradient(to right, rgba(17, 75, 92, 0.637), rgba(17, 75, 92, 0.555)), url(/IMAGES/html.jpg);
+    background-repeat: no-repeat;
+  }
+  .introduction h3 {
+    font-size: 2.3rem;
+    color: white;
+  }
+  .introduction .course-details {
+    width: 95%;
+  }
+  .introduction p {
+    color: white;
+    padding: 1rem 2rem;
+    background-color: #1E293B;
+  }
+  .introduction p a {
+    color: #BE3245;
+  }
+}
+.course-datails {
+  display: flex;
+  justify-content: space-between;
+}
+.course-datails .course-duration {
+  margin-top: 1rem;
+}
+.course-datails .things-to-learn {
+  width: 75%;
+  padding: 2rem;
+}
+.course-datails .things-to-learn .what-to-learn {
+  border: 1px solid black;
+  margin-top: 1rem;
+}
+.course-datails .things-to-learn .what-to-learn h3 {
+  border-bottom: 1px solid black;
+  padding: 1.5rem;
+  font-size: 2rem;
+}
+.course-datails .things-to-learn .what-to-learn ul {
+  padding: 2.5rem;
+}
+.course-datails .things-to-learn .what-to-learn .btns {
+  border-top: 1px solid #000;
+  padding: 2rem;
+  text-align: center;
+}
+.course-datails a {
+  background-color: #06B6D4;
+  color: white;
+  padding: 0.4rem 1rem;
+}
+.course-datails a:hover {
+  background-color: #0272f1;
+  transition: 0.5s;
+}
+.course-datails .amount-paid {
+  padding: 2rem;
+  width: 70%;
+}
+.course-datails .amount-paid .amount {
+  text-align: center;
+  width: 80%;
+}
+.course-datails .amount-paid .amount p {
+  font-size: 25px;
+  padding-bottom: 1rem;
+}
+.course-datails .amount-paid .amount img {
+  width: 100%;
+}
+.course-datails .amount-paid .how-to-get-me {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.course-datails .amount-paid .how-to-get-me h2 {
+  color: #DC3545;
+}
+.course-datails .amount-paid .course-achievements {
+  border: 1px solid black;
+}
+.course-datails .amount-paid .course-achievements ul {
+  padding: 1rem 3rem;
+}
+.course-datails .amount-paid .course-achievements h2 {
+  border-bottom: 1px solid black;
+  text-align: center;
+  padding: 1rem;
+  background-color: #F7F7F7;
+}
+.course-datails .amount-paid .course-achievements .btns {
+  border-top: 1px solid #000;
+  padding: 1.5rem;
+  text-align: center;
+}
+
+@media (max-width: 360px) {
+  .course-datails {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+  }
+  .course-datails .things-to-learn {
+    width: 100%;
+    padding: 1rem;
+  }
+  .course-datails .things-to-learn .what-to-learn {
+    border: 1px solid black;
+    margin-top: 1rem;
+  }
+  .course-datails .things-to-learn .what-to-learn h3 {
+    border-bottom: 1px solid black;
+    padding: 1.5rem;
+    font-size: 1.5rem;
+  }
+  .course-datails .things-to-learn .what-to-learn ul {
+    padding: 1.5rem;
+  }
+  .course-datails .things-to-learn .what-to-learn .btns {
+    border-top: 1px solid #000;
+    padding: 2rem;
+    text-align: center;
+  }
+  .course-datails a {
+    background-color: #06B6D4;
+    color: white;
+    padding: 0.4rem 1rem;
+  }
+  .course-datails a:hover {
+    background-color: #0272f1;
+    transition: 0.5s;
+  }
+  .course-datails .amount-paid {
+    padding: 2rem;
+    width: 100%;
+  }
+  .course-datails .amount-paid .amount {
+    text-align: center;
+    width: 100%;
+  }
+  .course-datails .amount-paid .amount p {
+    font-size: 25px;
+    padding-bottom: 1rem;
+  }
+  .course-datails .amount-paid .amount img {
+    width: 100%;
+  }
+  .course-datails .amount-paid .how-to-get-me {
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+  }
+  .course-datails .amount-paid .how-to-get-me h2 {
+    color: #DC3545;
+  }
+  .course-datails .amount-paid .course-achievements {
+    border: 1px solid black;
+  }
+  .course-datails .amount-paid .course-achievements ul {
+    padding: 1rem 3rem;
+  }
+  .course-datails .amount-paid .course-achievements h2 {
+    border-bottom: 1px solid black;
+    text-align: center;
+    padding: 1rem;
+    background-color: #F7F7F7;
+  }
+  .course-datails .amount-paid .course-achievements .btns {
+    border-top: 1px solid #000;
+    padding: 1.5rem;
+    text-align: center;
+  }
 }/*# sourceMappingURL=style.css.map */
